@@ -4,6 +4,7 @@ Domain Path 8.x-1.0-beta4 , XXXX-XX-XX
 #3112534: Wrong validation on edit (Domain path matches an existing domain path alias...)
 #3137375: Remove deprecated code on DomainPathForm
 #3131284: Support pathauto for domain
+#3138970: Delete domain paths on domain delete
 
 Domain Path 8.x-1.0-beta3 , 2020-05-12
 --------------------------------------
